# urania

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  com.github.pamugk.urania.desktop
src/: CMakeLists.txt  Main.qml  geoapiclient.cpp  geoapiclient.h  main.cpp  main.rs  mainwindow.cpp  mainwindow.ui  mappage.cpp  mappage.h  mappage.ui  mapwidget.cpp  mapwidget.h  startuppage.cpp  startuppage.h  startuppage.ui
