cmake_minimum_required(VERSION 3.16)

project(urania VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Dependency feature flags
set(OSMSCOUT_BUILD_CLIENT ON)
set(OSMSCOUT_BUILD_CLIENT_QT ON)
set(OSMSCOUT_BUILD_DEMOS OFF)
set(OSMSCOUT_BUILD_DOC_API OFF)
set(OSMSCOUT_BUILD_GPX OFF)
set(OSMSCOUT_BUILD_IMPORT OFF)
set(OSMSCOUT_BUILD_MAP ON)
set(OSMSCOUT_BUILD_MAP_AGG OFF)
set(OSMSCOUT_BUILD_MAP_CAIRO OFF)
set(OSMSCOUT_BUILD_MAP_DIRECTX OFF)
set(OSMSCOUT_BUILD_MAP_GDI OFF)
set(OSMSCOUT_BUILD_MAP_IOSX OFF)
set(OSMSCOUT_BUILD_MAP_OPENGL OFF)
set(OSMSCOUT_BUILD_MAP_QT ON)
set(OSMSCOUT_BUILD_MAP_SVG OFF)
set(OSMSCOUT_BUILD_TESTS OFF)
set(OSMSCOUT_BUILD_TOOL_DUMPDATA OFF)
set(OSMSCOUT_BUILD_TOOL_OSMSCOUT2 OFF)
set(OSMSCOUT_BUILD_TOOL_OSMSCOUTOPENGL OFF)
set(OSMSCOUT_BUILD_TOOL_PUBLICTRANSPORTMAP OFF)
set(OSMSCOUT_BUILD_TOOL_STYLEEDITOR OFF)

find_package(ECM 6.0.0 REQUIRED NO_MODULE)
set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})

include(KDEInstallDirs)
include(KDECMakeSettings)
include(ECMFindQmlModule)
include(ECMQmlModule)

find_package(Qt6 REQUIRED COMPONENTS
    Network
    Widgets
)

find_package(KF6 REQUIRED COMPONENTS
    IconThemes
)

add_subdirectory(src)
add_subdirectory(dependencies/libosmscout)

install(PROGRAMS com.github.pamugk.urania.desktop DESTINATION ${KDE_INSTALL_APPDIR})

feature_summary(WHAT ALL INCLUDE_QUIET_PACKAGES FATAL_ON_MISSING_REQUIRED_PACKAGES)
